--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,300;1,200;1,300&family=Moon+Dance&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Buda:wght@300&family=Combo&family=Moon+Dance&family=Moulpali&family=Suravaram&display=swap" rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
