Update headings font

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Moulpali&family=Rubik+Lines&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Moulpali&family=Rubik+80s+Fade&family=Rubik+Distressed&family=Rubik+Storm&display=swap" rel="stylesheet">  
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/23f114336a.js" crossorigin="anonymous"></script>
    
