--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Moulpali&family=Rubik+Distressed&display=swap" rel="stylesheet">  
     <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/23f114336a.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/23f114336a.js" crossorigin="anonymous" defer></script>
    
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
